# agents-arguing

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: debate_config.yaml
scripts/: setup.sh
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  debate_manager.py  debate_manager_simple.py  debater.py  debater_simple.py  llm_client.py  moderator.py
src/pipeline/: __init__.py  audio_pipeline.py  orchestrator.py
src/realtime/: __init__.py  streaming.py  voice_pipeline.py
src/services/: __init__.py  base.py  stt.py  tts.py
src/utils/: __init__.py  audio.py
src/video/: __init__.py  composer.py  echomimic_wrapper.py  generator.py
src/web/: __init__.py  gradio_app.py  server.py  websocket_handler.py
src/web/static/: index.html
tests/: conftest.py
tests/e2e/: test_debate_flow.py
tests/unit/: test_audio_utils.py  test_config.py  test_debater.py  test_streaming.py  test_video_composer.py  test_web_server.py
